0.02 2013-04-05
        - Added async methods.
	- added async example.
	- Fixed async-mode.

0.02 2013-04-01
        - Added example script.

0.01 2013-03-31
        - Separation from Sojolicious.
        - Initial submission to GitHub.